--- a/scratchpad/functiongame/index.html
+++ b/scratchpad/functiongame/index.html
@@ -39,7 +39,7 @@
 
     </div>
     <script src="adventureLibrary.js"></script>
-    <script src="beginSetup.js"></script>
+    <script src="initializeAdventure.js"></script>
     <script type="text/javascript">
       function pressMoveLeftButton() {
         moveLeft();
@@ -72,6 +72,6 @@
         jump();
       }
     </script>
-    <script src="endSetup.js"></script>
+    <script src="connectButtons.js"></script>
   </body>
 </html>
