--- a/scratchpad/functiongame/index.html
+++ b/scratchpad/functiongame/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Function Adventure!</title>
-    <link href="index.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
   </head>
   <body>
     <div id="gameGrid">
@@ -38,8 +38,8 @@
       <button id="jump">Jump!</button>
 
     </div>
-    <script src="adventureLibrary.js"></script>
-    <script src="initializeAdventure.js"></script>
+    <script src="js/adventureLibrary.js"></script>
+    <script src="js/initializeAdventure.js"></script>
     <script type="text/javascript">
       function pressMoveLeftButton() {
         moveLeft();
@@ -72,6 +72,6 @@
         jump();
       }
     </script>
-    <script src="connectButtons.js"></script>
+    <script src="js/connectButtons.js"></script>
   </body>
 </html>
