--- a/scratchpad/functiongame/index.html
+++ b/scratchpad/functiongame/index.html
@@ -41,35 +41,78 @@
     <script src="js/adventureLibrary.js"></script>
     <script src="js/initializeAdventure.js"></script>
     <script type="text/javascript">
+      /*
+        ASSIGNMENT PROMPT
+        Below are several empty function bodies; any code put inside of them
+        will run when their corresponding buttons/keys are clicked or pressed.
+
+        You have access to the following functions from adventureLibrary.js:
+          moveLeft, moveRight, moveUp, moveDown,
+          jumpLeft, jumpRight, jumpUp, jumpDown,
+          attack, jump, nudge
+
+        Plug in the functions above and execute them in the empty function
+        bodies below; if you execute the correct functions in here, the
+        game should become playable, and your player character can move around!
+      */
+
+      // This function will run when the user clicks the "Move Left" button,
+      // or presses the 'a' or left arrow key
       function pressMoveLeftButton() {
-        moveLeft();
+
       }
+
+      // This function will run when the user clicks the "Move Right" button,
+      // or presses the 'd' or right arrow key
       function pressMoveRightButton() {
-        moveRight();
+
       }
+
+      // This function will run when the user clicks the "Move Down" button,
+      // or presses the 's' or down arrow key
       function pressMoveDownButton() {
-        moveDown();
+
       }
+
+      // This function will run when the user clicks the "Move Up" button,
+      // or presses the 'w' or up arrow key
       function pressMoveUpButton() {
-        moveUp();
+
       }
+
+      // This function will run when the user clicks the "Attack!" button,
+      // or presses the spacebar on the keyboard
       function pressAttackButton() {
-        attack();
+
       }
+
+      // This function will run when the user clicks the "Jump Up" button,
+      // or presses SHIFT and the 'w' key
       function pressJumpUpButton() {
-        jumpUp(2);
+
       }
+
+      // This function will run when the user clicks the "Jump Down" button,
+      // or presses SHIFT and the 's' key
       function pressJumpDownButton() {
-        jumpDown(2);
+
       }
+
+      // This function will run when the user clicks the "Jump Left" button,
+      // or presses SHIFT and the 'a' key
       function pressJumpLeftButton() {
-        jumpLeft(3);
+
       }
+
+      // This function will run when the user clicks the "Jump Right" button,
+      // or presses SHIFT and the 'd' key
       function pressJumpRightButton() {
-        jumpRight(3);
+
       }
+
+      // This function will run when the user clicks the "Jump!" button
       function pressJumpButton() {
-        jump();
+
       }
     </script>
     <script src="js/connectButtons.js"></script>
