--- a/CheatSheet.html
+++ b/CheatSheet.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>107 Interactive Coding Cheat Sheet</title>
+    <title>GDWD 105 Interactive Coding Cheat Sheet</title>
     <link href="css/cheatsheet.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
   </head>
   <body>
-    <h1>107 Interactive Coding Cheat Sheet</h1>
+    <h1>GDWD 105 Interactive Coding Cheat Sheet</h1>
     <nav>
       <h5>Table of Contents</h5>
       <ul>
