--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>107 PORTFOLIO NEXUS</title>
+    <title>GDWD 105 NEXUS</title>
     <style>
       body {
         text-align: center;
@@ -38,7 +38,7 @@
     </style>
   </head>
   <body>
-    <h1>Portfolio Nexus</h1>
+    <!-- <h1>Portfolio Nexus</h1>
     <h2>
       These are the Portfolios and Repositories of my wonderful students!
     </h2>
@@ -188,6 +188,6 @@
       </div>
 
 
-    </div>
+    </div> -->
   </body>
 </html>
