--- a/examples/105/boxModel_part1/index.html
+++ b/examples/105/boxModel_part1/index.html
@@ -10,58 +10,39 @@
 <body>
     <div>
         This is a div representing the box model
-        <br>
         with margin, border, and padding.
-        <br>
         This is the content of the div.
     </div>
     <div>
         This is another div.
-        <br>
         See how it has the same styles as the first?
-        <br>
         And we didn't even have to write anymore more CSS!
-        <br>
         But what if we want a div to have a different style?
     </div>
     <div class="myFirstClass">
         This is a div with a class attribute set on it.
-        <br>
         It has the value "myFirstClass".
-        <br>
         It has a different style we created in CSS,
-        <br>
-        but still inherits
+        but still inherits the earlier div style too.
     </div>
     <div class="myFirstClass">
         This div also has the "myFirstClass" class on it.
-        <br>
         See how we were able to share the same style 
-        <br>
         across multiple divs?
     </div>
     <div id="myFirstId">
         This div has another attribute called an id on it.
-        <br>
         It has the value "myFirstId".
-        <br>
         The id attribute is like the class attribute,
-        <br>
         but an id value is supposed to be unique,
-        <br>
         and should only be used once,
-        <br>
         while class values can be reused as much as you want.
     </div>
     <div id="anotherId" class="myFirstClass">
         This is a div with another id value called "anotherId". 
-        <br>
         But it also has the class value "myFirstClass" on it.
-        <br>
         Id and class attributes can be used together!
-        <br>
         Just try to avoid writing CSS rules with conflicting CSS properties.
-        <br>
         It can make things confusing when you're just starting out.
     </div>
 </body>
