--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,14 +58,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for Day 10 (12/16)</h1>
+    <h1>GDWD 108 Agenda for Day 11 (01/03)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Presentations</h2>
-      <h2>Period 2 (6:30-7:20): Presentations</h2>
-      <h2>Period 3 (8:10-9:50): Presentations? &amp; Lab Time</h2>
+      <h2>Period 1 (5:30-6:20): Lab Time</h2>
+      <h2>Period 2 (6:30-7:20): Lab Time</h2>
+      <h2>Period 3 (8:10-9:50): Critiques for Jordan, August, Tyler, Evan H, and Calen</h2>
       <h2>Period 4 (10:00-10:50): Lab Time</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
@@ -73,16 +73,16 @@
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>Presentations - Illustrator/Motion Graphics</span>
-        <span>Starting beginning of class TODAY</span>
+        <span>Planning Assignment - Web Dev, UI/UX, Resume</span>
+        <span>Due at 7:20pm</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Project Turn-in - Illustrator/Motion Graphics (Final Drafts)</span>
-        <span>Due TODAY at 11:15pm</span>
+        <span>Planning Assignment - Weekly Plan III</span>
+        <span>Due at 11:15pm</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Project Turn-in - Illustrator/Motion Graphics (Process Post)</span>
-        <span>Due TODAY at 11:15pm</span>
+        <span>Critiques for Jordan, August, Tyler, Evan H, and Calen</span>
+        <span>Due at 11:15pm</span>
       </h2>
     </div>
 
