--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -66,7 +66,7 @@
       <h2>Period 1 (5:30-6:20): Lab Time</h2>
       <h2>Period 2 (6:30-7:20): Resume Building Review (optional)</h2>
       <h2>Period 3 (8:10-9:50): Critiques for Evan M, Devon, Jessica, Crystiana, and Desiree</h2>
-      <h2>Period 4 (10:00-10:50): Lab Time</h2>
+      <h2>Period 4 (10:00-10:50): Final Exam Review I</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
