--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -123,7 +123,7 @@
         <span>Photoshop/InDesign - Presentations and Project Turn-in Assignments</span>
       </div>
       <br><br> -->
-      <div class="agendaItem done">
+      <!-- <div class="agendaItem done">
         <span>12/12 (Day 06)</span>
         <span>Illustrator/Motion Graphics - Planning Assignments and Critiques Part 1</span>
       </div>
@@ -144,20 +144,20 @@
         <span>Illustrator/Motion Graphics - Presentations and Project Turn-in Assignments</span>
       </div>
       <br><br>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>12/19 - 01/02</span>
         <span>Winter Break!</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>12/19 - 12/21</span>
         <span>Lab Days: 9am - 5:30pm</span>
       </div>
-      <br><br>
-      <div class="agendaItem">
+      <br><br> -->
+      <div class="agendaItem done">
         <span>01/03 (Day 11)</span>
         <span>Web Development/UI/UX/Resume - Planning Assignments and Critiques Part 1</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>01/04 (Day 12)</span>
         <span>Web Development/UI/UX/Resume - Critiques Part 2 | Final Exam Review #1</span>
       </div>
