--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,34 +58,22 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for Day 12 (01/04)</h1>
+    <h1>GDWD 108 Agenda for Day 13 (01/05)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Lab Time</h2>
-      <h2>Period 2 (6:30-7:20): Resume Building Review (optional)</h2>
-      <h2>Period 3 (8:10-9:50): Critiques for Evan M, Devon, Jessica, Crystiana, and Desiree</h2>
-      <h2>Period 4 (10:00-10:50): Final Exam Review I</h2>
+      <h2>Period 1 (5:30-6:20): Final Exam Review II</h2>
+      <h2>Period 2 (6:30-7:20): Lab Time</h2>
+      <h2>Period 3 (8:10-9:50): Lab Time</h2>
+      <h2>Period 4 (10:00-10:50): Title IX and Surveys</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>Critiques for Evan M, Devon, Jessica, Crystiana, and Desiree</span>
-        <span>Due at 11:15pm</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Planning Assignment - Web Dev, UI/UX, Resume</span>
-        <span>Due yesterday</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Planning Assignment - Weekly Plan III</span>
-        <span>Due yesterday</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Critiques for Jordan, August, Tyler, Evan H, and Calen</span>
         <span>Due yesterday</span>
       </h2>
     </div>
