--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -151,16 +151,16 @@
       </div>
       <div class="agendaItem">
         <span>01/05 (Day 13)</span>
-        <span>Web Development/UI/UX/Resume - Lab Day | Final Exam Review #2</span>
+        <span>Web Development/UI/UX/Resume - Lab Day | Final Exam Review #2 | Exit Surveys</span>
       </div>
       <div class="agendaItem">
         <span>01/06 (Day 14)</span>
-        <span>Web Development/UI/UX/Resume - Presentations and Project Turn-in Assignments | Final Exam Review #3</span>
+        <span>[NEW INSTRUCTOR!!!] Web Development/UI/UX/Resume - Presentations and Project Turn-in Assignments | Final Exam Review #3</span>
       </div>
       <br><br>
       <div class="agendaItem">
         <span>01/09 (Day 15)</span>
-        <span>Exit Exam | Exit Surveys | Final Portfolio Site - Presentations</span>
+        <span>[NEW INSTRUCTOR!!!] Exit Exam | Final Portfolio Site - Presentations</span>
       </div>
     </div>
 
