--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -63,34 +63,33 @@
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Final Exam Review II</h2>
-      <h2>Period 2 (6:30-7:20): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): Lab Time</h2>
-      <h2>Period 4 (10:00-10:50): Title IX and Surveys</h2>
+      <h2>Period 1 (5:30-6:20): Introductions &amp; Folders Discussion</h2>
+      <h2>Period 2 (6:30-7:20): Intro to Text Editors</h2>
+      <h2>Period 3 (8:10-9:50): Intro to Github </h2>
+      <h2>Period 4 (10:00-10:50): Your First Web Page</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
-    <h1>Assignments, Deliverables &amp; More</h1>
+    <!-- <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem warning">
         <span>Critiques for Evan M, Devon, Jessica, Crystiana, and Desiree</span>
         <span>Due yesterday</span>
       </h2>
-    </div>
+    </div> -->
 
     <h1>Late Policy</h1>
     <div id="agenda">
-      <h2>Late Turn-in: 21% off</h2>
       <h2>
-        Last Day to Turn In Revisions/Late Assignments:
+        Last Day to Turn In Late Assignments:
         <br>One (1) Class Day after the Due Date
       </h2>
       <h3>(Anything turned in past this won't be graded)</h3>
     </div>
 
-    <h1>Syllabus</h1>
+    <!-- <h1>Syllabus</h1>
     <div id="agenda">
-      <!-- <div class="agendaItem done">
+      <div class="agendaItem done">
         <span>12/05 (Day 01)</span>
         <span>Photoshop/InDesign - Planning Assignments and Critiques Part 1</span>
       </div>
@@ -140,7 +139,7 @@
         <span>12/19 - 12/21</span>
         <span>Lab Days: 9am - 5:30pm</span>
       </div>
-      <br><br> -->
+      <br><br>
       <div class="agendaItem done">
         <span>01/03 (Day 11)</span>
         <span>Web Development/UI/UX/Resume - Planning Assignments and Critiques Part 1</span>
@@ -162,7 +161,7 @@
         <span>01/09 (Day 15)</span>
         <span>[NEW INSTRUCTOR!!!] Exit Exam | Final Portfolio Site - Presentations</span>
       </div>
-    </div>
+    </div> -->
 
   </body>
 </html>
