--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,15 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 1 (01/06)</h1>
+    <h1>GDWD 105 Agenda for Day 2 (01/07)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Introductions &amp; Folders Discussion</h2>
-      <h2>Period 2 (6:30-7:20): Intro to Text Editors</h2>
-      <h2>Period 3 (8:10-9:50): Intro to Github </h2>
-      <h2>Period 4 (10:00-10:50): Your First Web Page</h2>
+      <h2>Period 1 (5:30-6:20): Hello World pt2</h2>
+      <h2>Period 2 (6:30-7:20): Intro to HTML</h2>
+      <h2>Period 3 (8:10-9:50): Intro to HTML Elements and Attributes</h2>
+      <h2>Period 4 (10:00-10:50): Wiki Page Demo</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
