--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,15 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 2 (01/07)</h1>
+    <h1>GDWD 105 Agenda for Day 3 (01/08)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Hello World pt2</h2>
-      <h2>Period 2 (6:30-7:20): Intro to HTML</h2>
-      <h2>Period 3 (8:10-9:50): Intro to HTML Elements and Attributes</h2>
-      <h2>Period 4 (10:00-10:50): Wiki Page Demo</h2>
+      <h2>Period 1 (5:30-6:20): HTML Review</h2>
+      <h2>Period 2 (6:30-7:20): Intro to CSS</h2>
+      <h2>Period 3 (8:10-9:50): CSS Selectors Demo</h2>
+      <h2>Period 4 (10:00-10:50): Box Model Exercise</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
@@ -82,7 +82,7 @@
     <div id="agenda">
       <h2>
         Last Day to Turn In Late Assignments:
-        <br>One (1) Class Day after the Due Date
+        <br>Day 5 of the week the Exercise/Project was assigned in
       </h2>
       <h3>(Anything turned in past this won't be graded)</h3>
     </div>
