--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -81,6 +81,11 @@
     <h1>Late Policy</h1>
     <div id="agenda">
       <h2>
+        Late Exercises: 10% penalty
+        <br>
+        Late Projects: 21% penalty
+      </h2>
+      <h2>
         Last Day to Turn In Late Assignments:
         <br>Day 5 of the week the Exercise/Project was assigned in
       </h2>
