examples and box model

--- a/scratchpad/index.html
+++ b/scratchpad/index.html
@@ -1,56 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Intro to HTML</title>
-    </head>
-    <body>
-        <h1>This is an H1 Heading</h1>
-        <h2>This is an H2 Heading</h2>
-        <h3>This is an H3 Heading</h3>
-        <h4>This is an H4 Heading</h4>
-        <h5>This is an H5 Heading</h5>
-        <h6>This is an H6 Heading</h6>
+CSS -> Cascading Style Sheets
 
-        <p>
-            <em>Lorem ipsum dolor sit amet</em> 
-            consectetur adipisicing elit. Ea, hic cupiditate corrupti quaerat sapiente, facere similique, sed ut expedita mollitia harum optio dolorum dicta! Ipsum reprehenderit natus dicta nobis. Velit.
-        </p>
-        <p>
-            <strong>Lorem ipsum dolor sit amet</strong>
-            consectetur adipisicing elit. Ut sapiente recusandae ducimus laudantium quae saepe expedita soluta magnam, illo maxime necessitatibus deleniti autem repellat quos veritatis rem obcaecati praesentium voluptatum.
-        </p>
-        
-        <div>
-            <em><strong>Lorem ipsum dolor</strong></em>
-            , sit amet consectetur adipisicing elit. Aspernatur asperiores dolorem corrupti quam! Perspiciatis impedit rem esse repellat similique delectus consectetur culpa itaque officia fuga, velit illum aliquam? Quos, veniam?</div>
-        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius aperiam aliquam deleniti error pariatur corrupti, magnam molestias commodi sint corporis dolores id quam nisi, rem, blanditiis officia? Itaque, temporibus exercitationem.</div>
-    
-        <div>
-            <p>This is a paragraph inside of a div</p>
-        </div>
+Separation of Concerns
+HTML -> content layer
+CSS -> presentation layer
 
-        <ul>
-            <li>This is a list item</li>
-            <li>This is the second list item</li>
-            <li>number 3</li>
-            <li>number 4</li>
-            <ul>
-                <li>This is the inner list</li>
-                <li>another inner list item</li>
-            </ul>
-        </ul>
+HTML -> nouns
+CSS -> adjectives
 
-        <ol>
-            <li>This is step 1</li>
-            <li>Here's another step</li>
-            <li>And finally do this</li>
-            <ol>
-                <li>Here's an inner step</li>
-                <li>And here's another</li>
-            </ol>
-        </ol>
-    </body>
-</html>
+HTML -> wooden frames and drywall
+CSS -> paint/wallpaper or roofing/siding
+
+HTML -> skeleton
+CSS -> skin, hair, nails
