--- a/boxModel/index.html
+++ b/boxModel/index.html
@@ -13,7 +13,7 @@
             <div id="intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus quae quas molestias! Tempora molestias tenetur ipsum atque, veritatis mollitia odit cumque quidem possimus modi est reiciendis, facilis quae. Quaerat, quae.</div>
             <div id="content">
                 <h3>The Middle of a Momentous Matter</h3>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit porro et sequi placeat voluptatem esse, repellat possimus veniam in quo deserunt dolorum tenetur assumenda, nesciunt sint, rem dignissimos perspiciatis sunt.</div>
+                <div><span class="bold">Lorem ipsum</span> dolor sit amet, consectetur adipisicing elit. Fugit porro et sequi placeat voluptatem esse, repellat possimus veniam in quo deserunt dolorum tenetur assumenda, nesciunt sint, rem dignissimos perspiciatis sunt.</div>
                 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam at veritatis delectus atque quia voluptatibus ut nisi dolorum molestiae quaerat aut sed quae dignissimos, ea consectetur unde laborum qui voluptatum.</div>
                 <div class="quote">
                     <div class="quoteContent">
