--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,15 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 4 (01/11)</h1>
+    <h1>GDWD 105 Agenda for Day 5 (01/12)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Box Model Exercise (cont.)</h2>
-      <h2>Period 2 (6:30-7:20): CSS Font Properties</h2>
-      <h2>Period 3 (8:10-9:50): CSS Floats and Intro to Lab Pt 2</h2>
-      <h2>Period 4 (10:00-10:50): Lab Pt 2 (cont.)</h2>
+      <h2>Period 1 (5:30-6:20): Wiki Lab Part 2 and Revisions</h2>
+      <h2>Period 2 (6:30-7:20): Wiki Lab Part 2 and Revisions</h2>
+      <h2>Period 3 (8:10-9:50): Wiki Lab Part 2 and Revisions</h2>
+      <h2>Period 4 (10:00-10:50): Week 1 Quiz Review</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
