--- a/wikiPagePt2/index.html
+++ b/wikiPagePt2/index.html
@@ -39,7 +39,13 @@
                 </div>
                 <div class="sideBySide">
                     <span>Designer(s)</span>
-                    <span>Naoki Yoshida, Nobuaki Komoto</span>
+                    <span>
+                        Naoki Yoshida
+                        <br>
+                        Nobuaki Komoto
+                        <br>
+                        Nobuaki Komoto
+                    </span>
                 </div>
             </div>
             <p>
