--- a/responsiveNavBarLab/index.html
+++ b/responsiveNavBarLab/index.html
@@ -12,11 +12,9 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">
-                            FFXIV Lore
-                            <img 
-                                alt="crystal" 
-                                src="assets/images/mothercrystal.jpeg">
+                        <a id="logo" href="#">
+                            LOGO
+                            <img alt="crystal" src="assets/images/mothercrystal.jpeg">
                         </a>
                     </li>
                     <li><a href="#">Link 1</a></li>
@@ -32,5 +30,8 @@
                 </ul>
             </nav>
         </header>
+        <main>
+            <img alt="World Map" src="assets/images/Map_World.jpeg">
+        </main>
     </body>
 </html>
